removing inital streamlit

--- a/Orderbook.ipynb
+++ b/Orderbook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "9a15b463",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "105c7559",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "33c0fc9b",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
        "[400390 rows x 6 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "8281d9e1",
    "metadata": {},
    "outputs": [],
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "3f57ca45",
    "metadata": {},
    "outputs": [
@@ -278,30 +278,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5859400</td>\n",
-       "      <td>200</td>\n",
-       "      <td>5853300</td>\n",
-       "      <td>18</td>\n",
-       "      <td>5859800</td>\n",
-       "      <td>200</td>\n",
-       "      <td>5853200</td>\n",
-       "      <td>18</td>\n",
-       "      <td>5861000</td>\n",
-       "      <td>200</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5846500</td>\n",
-       "      <td>300</td>\n",
-       "      <td>5876500</td>\n",
-       "      <td>1160</td>\n",
-       "      <td>5845300</td>\n",
-       "      <td>300</td>\n",
-       "      <td>5879000</td>\n",
-       "      <td>500</td>\n",
-       "      <td>5843800</td>\n",
-       "      <td>200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>5859400</td>\n",
        "      <td>200</td>\n",
@@ -325,290 +301,34 @@
        "      <td>5845300</td>\n",
        "      <td>300</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>5859100</td>\n",
-       "      <td>18</td>\n",
-       "      <td>5853300</td>\n",
-       "      <td>18</td>\n",
-       "      <td>5859400</td>\n",
-       "      <td>200</td>\n",
-       "      <td>5853200</td>\n",
-       "      <td>18</td>\n",
-       "      <td>5859800</td>\n",
-       "      <td>200</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5849300</td>\n",
-       "      <td>300</td>\n",
-       "      <td>5873900</td>\n",
-       "      <td>100</td>\n",
-       "      <td>5846500</td>\n",
-       "      <td>300</td>\n",
-       "      <td>5876500</td>\n",
-       "      <td>1160</td>\n",
-       "      <td>5845300</td>\n",
-       "      <td>300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5859100</td>\n",
-       "      <td>18</td>\n",
-       "      <td>5853300</td>\n",
-       "      <td>18</td>\n",
-       "      <td>5859200</td>\n",
-       "      <td>18</td>\n",
-       "      <td>5853200</td>\n",
-       "      <td>18</td>\n",
-       "      <td>5859400</td>\n",
-       "      <td>200</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5849300</td>\n",
-       "      <td>300</td>\n",
-       "      <td>5871000</td>\n",
-       "      <td>10</td>\n",
-       "      <td>5846500</td>\n",
-       "      <td>300</td>\n",
-       "      <td>5873900</td>\n",
-       "      <td>100</td>\n",
-       "      <td>5845300</td>\n",
-       "      <td>300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5859100</td>\n",
-       "      <td>18</td>\n",
-       "      <td>5853300</td>\n",
-       "      <td>18</td>\n",
-       "      <td>5859200</td>\n",
-       "      <td>18</td>\n",
-       "      <td>5853200</td>\n",
-       "      <td>18</td>\n",
-       "      <td>5859300</td>\n",
-       "      <td>18</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5849300</td>\n",
-       "      <td>300</td>\n",
-       "      <td>5870000</td>\n",
-       "      <td>100</td>\n",
-       "      <td>5846500</td>\n",
-       "      <td>300</td>\n",
-       "      <td>5871000</td>\n",
-       "      <td>10</td>\n",
-       "      <td>5845300</td>\n",
-       "      <td>300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>400385</th>\n",
-       "      <td>5776100</td>\n",
-       "      <td>48</td>\n",
-       "      <td>5775400</td>\n",
-       "      <td>410</td>\n",
-       "      <td>5776700</td>\n",
-       "      <td>300</td>\n",
-       "      <td>5775300</td>\n",
-       "      <td>1400</td>\n",
-       "      <td>5776800</td>\n",
-       "      <td>200</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5774600</td>\n",
-       "      <td>100</td>\n",
-       "      <td>5777600</td>\n",
-       "      <td>100</td>\n",
-       "      <td>5774500</td>\n",
-       "      <td>200</td>\n",
-       "      <td>5777700</td>\n",
-       "      <td>100</td>\n",
-       "      <td>5774300</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>400386</th>\n",
-       "      <td>5776100</td>\n",
-       "      <td>48</td>\n",
-       "      <td>5775400</td>\n",
-       "      <td>410</td>\n",
-       "      <td>5776700</td>\n",
-       "      <td>300</td>\n",
-       "      <td>5775300</td>\n",
-       "      <td>1400</td>\n",
-       "      <td>5776800</td>\n",
-       "      <td>200</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5774600</td>\n",
-       "      <td>100</td>\n",
-       "      <td>5777500</td>\n",
-       "      <td>600</td>\n",
-       "      <td>5774500</td>\n",
-       "      <td>200</td>\n",
-       "      <td>5777600</td>\n",
-       "      <td>100</td>\n",
-       "      <td>5774300</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>400387</th>\n",
-       "      <td>5776100</td>\n",
-       "      <td>48</td>\n",
-       "      <td>5775400</td>\n",
-       "      <td>410</td>\n",
-       "      <td>5776700</td>\n",
-       "      <td>300</td>\n",
-       "      <td>5775300</td>\n",
-       "      <td>1400</td>\n",
-       "      <td>5776800</td>\n",
-       "      <td>200</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5774600</td>\n",
-       "      <td>100</td>\n",
-       "      <td>5777500</td>\n",
-       "      <td>600</td>\n",
-       "      <td>5774500</td>\n",
-       "      <td>200</td>\n",
-       "      <td>5777600</td>\n",
-       "      <td>100</td>\n",
-       "      <td>5774300</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>400388</th>\n",
-       "      <td>5776700</td>\n",
-       "      <td>300</td>\n",
-       "      <td>5775400</td>\n",
-       "      <td>410</td>\n",
-       "      <td>5776800</td>\n",
-       "      <td>200</td>\n",
-       "      <td>5775300</td>\n",
-       "      <td>1400</td>\n",
-       "      <td>5776900</td>\n",
-       "      <td>160</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5774600</td>\n",
-       "      <td>100</td>\n",
-       "      <td>5777600</td>\n",
-       "      <td>100</td>\n",
-       "      <td>5774500</td>\n",
-       "      <td>200</td>\n",
-       "      <td>5777800</td>\n",
-       "      <td>200</td>\n",
-       "      <td>5774300</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>400389</th>\n",
-       "      <td>5776700</td>\n",
-       "      <td>300</td>\n",
-       "      <td>5775400</td>\n",
-       "      <td>410</td>\n",
-       "      <td>5776800</td>\n",
-       "      <td>200</td>\n",
-       "      <td>5775300</td>\n",
-       "      <td>1400</td>\n",
-       "      <td>5776900</td>\n",
-       "      <td>160</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5774600</td>\n",
-       "      <td>100</td>\n",
-       "      <td>5777600</td>\n",
-       "      <td>100</td>\n",
-       "      <td>5774500</td>\n",
-       "      <td>200</td>\n",
-       "      <td>5777800</td>\n",
-       "      <td>200</td>\n",
-       "      <td>5774300</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>400390 rows × 40 columns</p>\n",
+       "<p>1 rows × 40 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Ask Price 1  Ask Size 1  Bid Price 1  Bid Size 1  Ask Price 2  \\\n",
-       "0           5859400         200      5853300          18      5859800   \n",
-       "1           5859400         200      5853300          18      5859800   \n",
-       "2           5859100          18      5853300          18      5859400   \n",
-       "3           5859100          18      5853300          18      5859200   \n",
-       "4           5859100          18      5853300          18      5859200   \n",
-       "...             ...         ...          ...         ...          ...   \n",
-       "400385      5776100          48      5775400         410      5776700   \n",
-       "400386      5776100          48      5775400         410      5776700   \n",
-       "400387      5776100          48      5775400         410      5776700   \n",
-       "400388      5776700         300      5775400         410      5776800   \n",
-       "400389      5776700         300      5775400         410      5776800   \n",
+       "   Ask Price 1  Ask Size 1  Bid Price 1  Bid Size 1  Ask Price 2  Ask Size 2  \\\n",
+       "1      5859400         200      5853300          18      5859800         200   \n",
        "\n",
-       "        Ask Size 2  Bid Price 2  Bid Size 2  Ask Price 3  Ask Size 3  ...  \\\n",
-       "0              200      5853200          18      5861000         200  ...   \n",
-       "1              200      5853200          18      5861000         200  ...   \n",
-       "2              200      5853200          18      5859800         200  ...   \n",
-       "3               18      5853200          18      5859400         200  ...   \n",
-       "4               18      5853200          18      5859300          18  ...   \n",
-       "...            ...          ...         ...          ...         ...  ...   \n",
-       "400385         300      5775300        1400      5776800         200  ...   \n",
-       "400386         300      5775300        1400      5776800         200  ...   \n",
-       "400387         300      5775300        1400      5776800         200  ...   \n",
-       "400388         200      5775300        1400      5776900         160  ...   \n",
-       "400389         200      5775300        1400      5776900         160  ...   \n",
+       "   Bid Price 2  Bid Size 2  Ask Price 3  Ask Size 3  ...  Bid Price 8  \\\n",
+       "1      5853200          18      5861000         200  ...      5849300   \n",
        "\n",
-       "        Bid Price 8  Bid Size 8  Ask Price 9  Ask Size 9  Bid Price 9  \\\n",
-       "0           5846500         300      5876500        1160      5845300   \n",
-       "1           5849300         300      5876500        1160      5846500   \n",
-       "2           5849300         300      5873900         100      5846500   \n",
-       "3           5849300         300      5871000          10      5846500   \n",
-       "4           5849300         300      5870000         100      5846500   \n",
-       "...             ...         ...          ...         ...          ...   \n",
-       "400385      5774600         100      5777600         100      5774500   \n",
-       "400386      5774600         100      5777500         600      5774500   \n",
-       "400387      5774600         100      5777500         600      5774500   \n",
-       "400388      5774600         100      5777600         100      5774500   \n",
-       "400389      5774600         100      5777600         100      5774500   \n",
+       "   Bid Size 8  Ask Price 9  Ask Size 9  Bid Price 9  Bid Size 9  Ask Price 10  \\\n",
+       "1         300      5876500        1160      5846500         300       5879000   \n",
        "\n",
-       "        Bid Size 9  Ask Price 10  Ask Size 10  Bid Price 10  Bid Size 10  \n",
-       "0              300       5879000          500       5843800          200  \n",
-       "1              300       5879000          500       5845300          300  \n",
-       "2              300       5876500         1160       5845300          300  \n",
-       "3              300       5873900          100       5845300          300  \n",
-       "4              300       5871000           10       5845300          300  \n",
-       "...            ...           ...          ...           ...          ...  \n",
-       "400385         200       5777700          100       5774300          100  \n",
-       "400386         200       5777600          100       5774300          100  \n",
-       "400387         200       5777600          100       5774300          100  \n",
-       "400388         200       5777800          200       5774300          100  \n",
-       "400389         200       5777800          200       5774300          100  \n",
+       "   Ask Size 10  Bid Price 10  Bid Size 10  \n",
+       "1          500       5845300          300  \n",
        "\n",
-       "[400390 rows x 40 columns]"
+       "[1 rows x 40 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "orderbook"
+    "orderbook[orderbook.index==1]"
    ]
   },
   {
